--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -48,7 +48,7 @@
         </div>
 -->
         <div class="col-md-5 mx-auto">
-            <div class="card text-dark">
+            <div class="card text-dark mt-5 mt-sm-2">
               <div class="card-body">
                 <h4 class="card-title text-center">Registrarme</h4>
                 <div class="social text-center">
