--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -29,7 +29,7 @@
                     </div>
                     <div class="d-flex justify-content-between">
                         <h6>
-                            <a href="#pablo" class="link">Registrarme</a>
+                            <a class="link" [routerLink]="['/register']">Registrarme</a>
                         </h6>
                         <h6>
                             <a href="#pablo" class="link">Contactarnos</a>
