--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -26,7 +26,7 @@
             </div>
             <div class="row mt-4">
               <div class="col-md-4">
-                <div class="card card-background card-raised" data-background-color="" style="background-image: url('assets/img/register-01.jpg')">
+                <div class="card card-background card-raised" data-background-color="" style="background-image: url('assets/img/bg8.jpg')">
                   <div class="info">
                     <div class="icon icon-white">
                       <i class="fas fa-fingerprint"></i>
@@ -71,6 +71,7 @@
                 </div>
               </div>
             </div>
+            <!--
         <div class="separator separator-primary"></div>
         <div class="section-story-overview">
           <div class="row">
@@ -89,7 +90,8 @@
               <p>The Arctic Ocean freezes every winter and much of the sea-ice then thaws every summer, and that process will continue whatever happens with climate change. Even if the Arctic continues to be one of the fastest-warming regions of the world, it will always be plunged into bitterly cold polar dark every winter. And year-by-year, for all kinds of natural reasons, there’s huge variety of the state of the ice. </p>
             </div>
           </div>
-        </div>
+        </div> 
+      -->
       </div>
     </div>
 
