--- a/src/assets/sass/now-ui-kit/_variables.scss
+++ b/src/assets/sass/now-ui-kit/_variables.scss
@@ -8,6 +8,11 @@ $none:                       0   !default;
 $border-thin:                1px !default;
 $border-thick:               2px !default;
 
+$primary:                    #ce5766;
+$secondary:                  #7a5e5f;
+$warning:                    #cda97b;
+$danger:                     #b60d1a;
+
 $white-color:                #FFFFFF !default;
 $white-bg:                   #FFFFFF !default;
 $orange-bg:                  #e95e38 !default;
