--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,42 +1,47 @@
-
-<div class="page-header" filter-color="orange">
-    <div class="page-header-image" style="background-image:url(assets/img/login.jpg)"></div>
-    <div class="container">
-        <div class="col-md-4 content-center">
-            <div class="card card-login card-plain">
-                <form class="form" method="" action="">
-                    <div class="header header-primary text-center">
-                        <div class="logo-container">
-                            <img src="assets/img/now-logo.png" alt="">
-                        </div>
-                    </div>
-                    <div class="content">
-                      <div class="input-group form-group-no-border input-lg" [ngClass]="{'input-group-focus':focus===true}">
-                        <div class="input-group-prepend">
-                            <span class="input-group-text">  <i class="now-ui-icons users_circle-08"></i></span>
-                        </div>
-                          <input type="text" class="form-control" placeholder="Usuario" (focus)="focus=true" (blur)="focus=false" >
-                      </div>
-                      <div class="input-group form-group-no-border input-lg" [ngClass]="{'input-group-focus':focus1===true}">
-                        <div class="input-group-prepend">
-                            <span class="input-group-text"><i class="now-ui-icons text_caps-small"></i></span>
-                        </div>
-                          <input type="password" placeholder="Contraseña" class="form-control" (focus)="focus1=true" (blur)="focus1=false"/>
-                      </div>
-                    </div>
-                    <div class="footer text-center">
-                        <a href="#pablo" class="btn btn-primary btn-round btn-lg btn-block">Ingresar</a>
-                    </div>
-                    <div class="d-flex justify-content-between">
-                        <h6>
-                            <a class="link" [routerLink]="['/register']">Registrarme</a>
-                        </h6>
-                        <h6>
-                            <a href="#pablo" class="link">Contactarnos</a>
-                        </h6>
-                    </div>
-                </form>
+<div class="page-header" filter-color="blue">
+  <div class="page-header-image" style="background-image:url(assets/img/login.jpg)"></div>
+  <div class="container">
+    <div class="col-md-4 content-center">
+      <div class="card card-login card-plain">
+        <form class="form" [formGroup]="formulario" (ngSubmit)="loginUsuario()"> 
+          <div class="header header-primary text-center d-none">
+            <div class="logo-container">
+              <img src="assets/img/now-logo.png" alt="">
             </div>
-        </div>
+          </div>
+          <div class="content">
+            <div class="input-group form-group-no-border input-lg" [ngClass]="{'input-group-focus':focus===true}">
+              <div class="input-group-prepend">
+                <span class="input-group-text"> <i class="now-ui-icons users_circle-08"></i></span>
+              </div>
+              <input type="text" class="form-control" placeholder="Usuario" formControlName="usuario"
+                (focus)="focus=true" 
+                (blur)="focus=false"
+                required email>
+            </div>
+            <div class="input-group form-group-no-border input-lg" [ngClass]="{'input-group-focus':focus1===true}">
+              <div class="input-group-prepend">
+                <span class="input-group-text"><i class="now-ui-icons text_caps-small"></i></span>
+              </div>
+              <input type="password" placeholder="Contraseña" class="form-control" formControlName="password"
+                (focus)="focus1=true"
+                (blur)="focus1=false" 
+                required minlength="6"/>
+            </div>
+          </div>
+          <div class="footer text-center">
+            <button type="submit" class="btn btn-primary btn-round btn-lg btn-block">Ingresar</button>
+          </div>
+          <div class="d-flex justify-content-between">
+            <h6>
+              <a class="link" [routerLink]="['/register']">Registrarme</a>
+            </h6>
+            <h6>
+              <a href="#pablo" class="link" [routerLink]="['/contact-us']">Contactarnos</a>
+            </h6>
+          </div>
+        </form>
+      </div>
     </div>
+  </div>
 </div>
