--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -3,90 +3,77 @@
   <div class="content">
     <div class="container">
       <div class="row">
-
-        <!--
-        <div class="col-md-4 ml-auto mr-auto">
-          <div class="info info-horizontal">
-            <div class="icon icon-primary">
-              <i class="fas fa-gifts" aria-hidden></i>
-            </div>
-            <div class="description">
-              <h5 class="info-title">
-                Beneficios
-              </h5>
-              <p class="description">
-                Seguridad
-              </p>
-            </div>
-          </div>
-          <div class="info info-horizontal">
-            <div class="icon icon-primary">
-              <i class="fas fa-gifts" aria-hidden></i>
-            </div>
-            <div class="description">
-              <h5 class="info-title">
-                Beneficios
-              </h5>
-              <p class="description">
-                Seguridad
-              </p>
-            </div>
-          </div>
-          <div class="info info-horizontal">
-            <div class="icon icon-primary">
-              <i class="fas fa-gifts" aria-hidden></i>
-            </div>
-            <div class="description">
-              <h5 class="info-title">
-                Beneficios
-              </h5>
-              <p class="description">
-                Seguridad
-              </p>
-            </div>
-          </div>
-        </div>
--->
         <div class="col-md-5 mx-auto">
-            <div class="card text-dark mt-5 mt-sm-2">
+
+          <!-- FORMULARIO DE REGISTRO -->
+            <div class="card text-dark mt-5 mt-sm-2" *ngIf="formActivated">
               <div class="card-body">
                 <h4 class="card-title text-center">Registrarme</h4>
-                <div class="social text-center">
+                <div class="social text-center d-none">
                   <button class="btn btn-icon btn-google"><i class="fab fa-google"></i></button>
                   <button class="btn btn-icon btn-facebook"><i class="fab fa-facebook"></i></button>
                   <h5 class="card-description"> </h5>
                 </div>
-                <form action="" class="form" method="" novalidate="">
-                  <div class="input-group" [ngClass]="{'input-group-focus':f_nombre===true}">
+                <form (ngSubmit)="create()" class="form" #regForm="ngForm">
+                  <div class="input-group" [ngClass]="{'input-group-focus':fNombre===true}">
                     <div class="input-group-prepend">
                       <span class="input-group-text"><i class="now-ui-icons text_caps-small"></i></span>
                     </div>
-                    <input class="form-control" placeholder="Nombre" type="text" (focus)="f_nombre=true" (blur)="f_nombre=false">
+                    <input class="form-control" placeholder="Nombre" type="text" name="firstname"
+                      (focus)="fNombre=true" 
+                      (blur)="fNombre=false" 
+                      [(ngModel)]="usuario.firstname" required minlength="3" #firstname>
                   </div>
-                  <div class="input-group" [ngClass]="{'input-group-focus':f_apellido===true}">
+                  <div class="input-group" [ngClass]="{'input-group-focus':fApellido===true}">
                     <div class="input-group-prepend">
                       <span class="input-group-text"><i class="now-ui-icons text_caps-small"></i></span>
                     </div>
-                    <input class="form-control" placeholder="Apellido" type="text" (focus)="f_apellido=true" (blur)="f_apellido=false">
+                    <input class="form-control" placeholder="Apellido" type="text" name="lastname"
+                      (focus)="fApellido=true" 
+                      (blur)="fApellido=false" 
+                      [(ngModel)]="usuario.lastname" required minlength="3">
                   </div>
-                  <div class="input-group" [ngClass]="{'input-group-focus':f_email===true}">
+                  <div class="input-group" [ngClass]="{'input-group-focus':fEmail===true}">
                     <div class="input-group-prepend">
                       <span class="input-group-text"><i class="now-ui-icons ui-1_email-85"></i></span>
                     </div>
-                    <input class="form-control" placeholder="Email" type="text"  (focus)="f_email=true" (blur)="f_email=false">
+                    <input class="form-control" placeholder="Email" type="text" name="username"
+                      (focus)="fEmail=true" 
+                      (blur)="fEmail=false" 
+                      [(ngModel)]="usuario.username" required email>
                   </div>
                   <div class="form-check my-3">
                     <label class="form-check-label">
-                      <input class="form-check-input" type="checkbox">
+                      <input class="form-check-input" type="checkbox" name="terms" [(ngModel)]="terms" [checked]="terms" required>
                       <span class="form-check-sign"></span> Estoy de acuerdo con los <a href="#something">términos y condiciones</a>.
                     </label>
                   </div>
                   <div class="card-footer border-0 text-center bg-transparent">
-                    <a class="btn btn-primary btn-round btn-lg" href="#pablo">Registrarme</a>
+                    <button class="btn btn-primary btn-round btn-lg" type="submit" 
+                      [disabled]="!regForm.form.valid">Registrarme</button>
                   </div>
                 </form>
               </div>
             </div>
+          <!-- /FORMULARIO DE REGISTRO -->
+
+          <!-- INFORMACIÓN POST-REGISTRO -->
+            <div class="card text-dark mt-5 mt-sm-2" *ngIf="!formActivated">
+              <div class="card-body">
+                <h4 class="card-title text-center">Activación</h4>
+                <p>Un mensaje de confirmación fue enviado a su casilla de correo electrónico registrada anteriormente.
+                  Recuerde activar su cuenta en un periodo de 48 horas. Posterior a este plazo, deberá registrarse nuevamente.
+                </p>
+                <div class="row">
+                  <div class="col">
+                    <a class="btn btn-primary btn-round btn-lg" [routerLink]="['/login']"><i class="fas fa-sign-in-alt mr-2"></i>
+                      Ingresar
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          <!-- /INFORMACIÓN POST-REGISTRO -->
         </div>
       </div>
     </div>
