--- a/src/app/default/page-not-found.component.html
+++ b/src/app/default/page-not-found.component.html
@@ -1,1 +1,12 @@
-<h1>404<br><small>Page not found!</small></h1>
+<div class="wrapper">
+  <div class="page-header">
+    <div class="page-header-image rellax-header"></div>
+    
+        <div class="row">
+            <div class="col">
+                <h1>404<br><small>Page not found!</small></h1>
+            </div>
+        </div>
+    
+  </div>
+</div>
