--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -6,7 +6,7 @@
         <div class="col-md-5 mx-auto">
 
           <!-- FORMULARIO DE REGISTRO -->
-            <div class="card text-dark mt-5 mt-sm-2" *ngIf="formActivated">
+            <div class="card text-dark mt-sm-2" *ngIf="formActivated">
               <div class="card-body">
                 <h4 class="card-title text-center">Registrarme</h4>
                 <div class="social text-center d-none">
