--- a/src/app/default/page-not-found.component.html
+++ b/src/app/default/page-not-found.component.html
@@ -1,12 +1,12 @@
 <div class="wrapper">
   <div class="page-header">
     <div class="page-header-image rellax-header"></div>
-    
-        <div class="row">
+    <div class="container pt-5">
+        <div class="row pt-5">
             <div class="col">
                 <h1>404<br><small>Page not found!</small></h1>
             </div>
         </div>
-    
+    </div>
   </div>
 </div>
