--- a/src/assets/css/demo.css
+++ b/src/assets/css/demo.css
@@ -94,7 +94,7 @@
 }
 
 #notifications {
-    background-color: #FFFFFF;
+    background-color: #ffffff;
     display: block;
     width: 100%;
     position: relative;
@@ -122,7 +122,7 @@
 }
 
 .txt-white {
-    color: #FFFFFF;
+    color: #ffffff;
 }
 
 .txt-gray {
@@ -149,7 +149,7 @@
 
 .logo-container .brand {
     font-size: 16px;
-    color: #FFFFFF;
+    color: #ffffff;
     line-height: 18px;
     float: left;
     margin-left: 10px;
@@ -229,7 +229,6 @@
     }
 }
 
-
 /*.separator{
     content: "Separator";
     color: #FFFFFF;
@@ -299,9 +298,7 @@
     }
 }
 
-
 /*       Loading dots  */
-
 
 /*      transitions */
 
@@ -310,10 +307,10 @@
 .presentation .front .btn,
 .logo-container .logo,
 .logo-container .brand {
-    -webkit-transition: all .2s;
-    -moz-transition: all .2s;
-    -o-transition: all .2s;
-    transition: all .2s;
+    -webkit-transition: all 0.2s;
+    -moz-transition: all 0.2s;
+    -o-transition: all 0.2s;
+    transition: all 0.2s;
 }
 
 #images h4 {
@@ -323,7 +320,6 @@
 #javascriptComponents {
     padding-bottom: 0;
 }
-
 
 /*      layer animation          */
 
@@ -353,7 +349,7 @@
 }
 
 .navbar-transparent.navbar-small .logo-container .brand {
-    color: #FFFFFF;
+    color: #ffffff;
 }
 
 .navbar-default.navbar-small .logo-container .brand {
@@ -387,7 +383,7 @@
 }
 
 .section-tabs {
-    background: #EEEEEE;
+    background: #eeeeee;
 }
 
 .section-pagination {
@@ -410,7 +406,7 @@
     text-decoration: none;
 }
 
-.section-examples a+a {
+.section-examples a + a {
     margin-top: 30px;
 }
 
@@ -418,8 +414,8 @@
     margin-top: 30px;
 }
 
-.components-page .wrapper>.header,
-.tutorial-page .wrapper>.header {
+.components-page .wrapper > .header,
+.tutorial-page .wrapper > .header {
     height: 500px;
     padding-top: 128px;
     background-size: cover;
@@ -428,7 +424,7 @@
 
 .components-page .title,
 .tutorial-page .title {
-    color: #FFFFFF;
+    color: #ffffff;
 }
 
 .brand .h1-seo {
@@ -487,3 +483,402 @@
         display: none !important;
     }
 }
+virtual-scroll {
+    display: block;
+    width: 100%;
+}
+.cuppa-dropdown {
+    position: relative;
+}
+.c-btn {
+    display: inline-block;
+    border-width: 1px;
+    line-height: 1.25;
+    border-radius: 3px;
+    font-size: 14px;
+    padding: 5px 10px;
+    cursor: pointer;
+}
+.c-btn.disabled {
+    background: #ccc;
+}
+.selected-list .c-list {
+    float: left;
+    padding: 0;
+    margin: 0;
+    width: calc(100% - 20px);
+}
+.selected-list .c-list .c-token {
+    list-style: none;
+    padding: 2px 25px 2px 8px;
+    border-radius: 2px;
+    margin-right: 4px;
+    margin-top: 2px;
+    float: left;
+    position: relative;
+}
+.selected-list .c-list .c-token .c-label {
+    display: block;
+    float: left;
+}
+.selected-list .c-list .c-token .c-remove {
+    position: absolute;
+    right: 8px;
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+    transform: translateY(-50%);
+    width: 10px;
+}
+.selected-list .c-list .c-token .c-remove svg {
+    fill: #fff;
+}
+.selected-list .fa-angle-down,
+.selected-list .fa-angle-up {
+    font-size: 15pt;
+    position: absolute;
+    right: 10px;
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+    transform: translateY(-50%);
+}
+.selected-list .c-angle-down,
+.selected-list .c-angle-up {
+    width: 15px;
+    height: 15px;
+    position: absolute;
+    right: 10px;
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+    transform: translateY(-50%);
+    pointer-events: none;
+}
+.selected-list .c-angle-down svg,
+.selected-list .c-angle-up svg {
+    fill: #333;
+}
+.selected-list .countplaceholder {
+    position: absolute;
+    right: 30px;
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+    transform: translateY(-50%);
+}
+.selected-list .c-btn {
+    width: 100%;
+    padding: 10px;
+    cursor: pointer;
+    display: flex;
+    position: relative;
+}
+.selected-list .c-btn .c-icon {
+    position: absolute;
+    right: 5px;
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+    transform: translateY(-50%);
+}
+.dropdown-list {
+    position: absolute;
+    padding-top: 14px;
+    width: 100%;
+    z-index: 9999;
+}
+.dropdown-list ul {
+    padding: 0;
+    list-style: none;
+    overflow: auto;
+    margin: 0;
+}
+.dropdown-list ul li {
+    padding: 10px;
+    cursor: pointer;
+    text-align: left;
+}
+.dropdown-list ul li:first-child {
+    padding-top: 10px;
+}
+.dropdown-list ul li:last-child {
+    padding-bottom: 10px;
+}
+.dropdown-list ::-webkit-scrollbar {
+    width: 8px;
+}
+.dropdown-list ::-webkit-scrollbar-thumb {
+    background: #ccc;
+    border-radius: 5px;
+}
+.dropdown-list ::-webkit-scrollbar-track {
+    background: #f2f2f2;
+}
+.arrow-down,
+.arrow-up {
+    width: 0;
+    height: 0;
+    border-left: 13px solid transparent;
+    border-right: 13px solid transparent;
+    border-bottom: 15px solid #fff;
+    margin-left: 15px;
+    position: absolute;
+    top: 0;
+}
+.arrow-down {
+    bottom: -14px;
+    top: unset;
+    -webkit-transform: rotate(180deg);
+    transform: rotate(180deg);
+}
+.arrow-2 {
+    border-bottom: 15px solid #ccc;
+    top: -1px;
+}
+.arrow-down.arrow-2 {
+    top: unset;
+    bottom: -16px;
+}
+.list-area {
+    border: 1px solid #ccc;
+    border-radius: 3px;
+    background: #fff;
+    margin: 0;
+}
+.select-all {
+    padding: 10px;
+    border-bottom: 1px solid #ccc;
+    text-align: left;
+}
+.list-filter {
+    border-bottom: 1px solid #ccc;
+    position: relative;
+    padding-left: 35px;
+    height: 35px;
+}
+.list-filter input {
+    border: 0;
+    width: 100%;
+    height: 100%;
+    padding: 0;
+}
+.list-filter input:focus {
+    outline: 0;
+}
+.list-filter .c-search {
+    position: absolute;
+    top: 9px;
+    left: 10px;
+    width: 15px;
+    height: 15px;
+}
+.list-filter .c-search svg {
+    fill: #888;
+}
+.list-filter .c-clear {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    width: 15px;
+    height: 15px;
+}
+.list-filter .c-clear svg {
+    fill: #888;
+}
+.pure-checkbox input[type="checkbox"] {
+    border: 0;
+    clip: rect(0 0 0 0);
+    height: 1px;
+    margin: -1px;
+    overflow: hidden;
+    padding: 0;
+    position: absolute;
+    width: 1px;
+}
+.pure-checkbox input[type="checkbox"]:focus + label:before,
+.pure-checkbox input[type="checkbox"]:hover + label:before {
+    background-color: #f2f2f2;
+}
+.pure-checkbox input[type="checkbox"]:active + label:before {
+    transition-duration: 0s;
+}
+.pure-checkbox input[type="checkbox"] + label {
+    position: relative;
+    padding-left: 2em;
+    vertical-align: middle;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    cursor: pointer;
+    margin: 0;
+    font-weight: 300;
+}
+.pure-checkbox input[type="checkbox"] + label:before {
+    box-sizing: content-box;
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: 0;
+    width: 14px;
+    height: 14px;
+    margin-top: -9px;
+    text-align: center;
+    transition: 0.4s;
+}
+.pure-checkbox input[type="checkbox"] + label:after {
+    box-sizing: content-box;
+    content: "";
+    position: absolute;
+    -webkit-transform: scale(0);
+    transform: scale(0);
+    -webkit-transform-origin: 50%;
+    transform-origin: 50%;
+    transition: transform 0.2s ease-out, -webkit-transform 0.2s ease-out;
+    background-color: transparent;
+    top: 50%;
+    left: 4px;
+    width: 8px;
+    height: 3px;
+    margin-top: -4px;
+    border-style: solid;
+    border-color: #fff;
+    border-width: 0 0 3px 3px;
+    -o-border-image: none;
+    border-image: none;
+    -webkit-transform: rotate(-45deg) scale(0);
+    transform: rotate(-45deg) scale(0);
+}
+.pure-checkbox input[type="checkbox"]:disabled + label:before {
+    border-color: #ccc;
+}
+.pure-checkbox input[type="checkbox"]:disabled:focus + label:before .pure-checkbox input[type="checkbox"]:disabled:hover + label:before {
+    background-color: inherit;
+}
+.pure-checkbox input[type="checkbox"]:disabled:checked + label:before {
+    background-color: #ccc;
+}
+.pure-checkbox input[type="radio"]:checked + label:before {
+    background-color: #fff;
+}
+.pure-checkbox input[type="radio"]:checked + label:after {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+}
+.pure-checkbox input[type="radio"] + label:before {
+    border-radius: 50%;
+}
+.pure-checkbox input[type="checkbox"]:checked + label:after {
+    content: "";
+    transition: transform 0.2s ease-out, -webkit-transform 0.2s ease-out;
+    -webkit-transform: rotate(-45deg) scale(1);
+    transform: rotate(-45deg) scale(1);
+}
+.list-message {
+    text-align: center;
+    margin: 0;
+    padding: 15px 0;
+    font-size: initial;
+}
+.list-grp {
+    padding: 0 15px !important;
+}
+.list-grp h4 {
+    text-transform: capitalize;
+    margin: 15px 0 0;
+    font-size: 14px;
+    font-weight: 700;
+}
+.list-grp > li {
+    padding-left: 15px !important;
+}
+.grp-item {
+    padding-left: 30px !important;
+}
+.grp-title {
+    padding-bottom: 0 !important;
+}
+.grp-title label {
+    margin-bottom: 0 !important;
+    font-weight: 800;
+    text-transform: capitalize;
+}
+.grp-title:hover {
+    background: 0 0 !important;
+}
+.loading-icon {
+    width: 20px;
+    float: right;
+}
+.nodata-label {
+    width: 100%;
+    text-align: center;
+    padding: 10px 0 0;
+}
+.btn-container {
+    text-align: center;
+    padding: 0 5px 10px;
+}
+
+.selected-list .c-btn {
+    box-shadow: none !important;
+    border-radius: 30px !important;
+    padding: 7px 18px 8px !important;
+    border: 1px solid #e3e3e3 !important;
+  }
+  
+  .selected-list .c-list .c-token {
+    background: 0 0 !important;
+    color: #2c2c2c !important;
+  }
+  
+  .cuppa-dropdown .dropdown-list {
+    z-index: 1000 !important;
+  }
+  
+  .cuppa-dropdown .dropdown-list .list-area {
+    border: none !important;
+    border-radius: 0.125rem !important;
+    box-shadow: 0 10px 50px 0 rgba(0, 0, 0, 0.2) !important;
+  }
+  
+  .cuppa-dropdown .dropdown-list .list-area .list-filter input {
+    border-top-left-radius: 12px;
+    border-top-right-radius: 12px;
+  }
+  
+  .cuppa-dropdown .dropdown-list .list-area .pure-checkbox label {
+    width: 100%;
+  }
+  
+  .cuppa-dropdown .dropdown-list .list-area .pure-checkbox input[type="checkbox"]:checked+label:before {
+    background: 0 0 !important;
+    -webkit-animation: none !important;
+    animation: none !important;
+    right: 0 !important;
+  }
+  
+  .cuppa-dropdown .dropdown-list .list-area .pure-checkbox input[type="checkbox"]+label:before {
+    border: none !important;
+  }
+  
+  .cuppa-dropdown .dropdown-list .list-area .pure-checkbox input[type="checkbox"]+label:after {
+    left: auto !important;
+    width: 14px !important;
+    height: 7px !important;
+    border-width: 0 0 1px 1px !important;
+    right: 0 !important;
+    opacity: 0.5 !important;
+    border-color: #2c2c2c !important;
+  }
+  
+  .cuppa-dropdown .dropdown-list .list-area ul li:last-child {
+    border-bottom-right-radius: 0.125rem;
+    border-bottom-left-radius: 0.125rem;
+  }
+  
+  .cuppa-dropdown .dropdown-list .list-area ul li:first-child {
+    border-top-left-radius: 0.125rem;
+    border-top-right-radius: 0.125rem;
+  }
+  
+  .cuppa-dropdown .dropdown-list .arrow-up {
+    margin-left: 30px !important;
+    border-bottom: 15px solid #fff;
+  }
