--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -19,6 +19,11 @@
                 <p>Soy invitado</p>
             </a>
             </li>
+            <li class="nav-item" id="item-newevent">
+              <a class="nav-link" [routerLink]="['/new-event']">
+                <p>Nuevo evento</p>
+              </a>
+            </li>
         </ul>
         <ul class="navbar-nav ml-auto d-md-none">
           <li class="nav-item" id="item-register">
