Movimiento de objetos

--- a/src/app/eventos/admin/nuevo-evento.component.html
+++ b/src/app/eventos/admin/nuevo-evento.component.html
@@ -1,6 +1,6 @@
 <div class="wrapper">
     <div class="page-header page-header-xsmall">
-        <div class="page-header-image rellax-header" data-rellax-speed="-8" style="background-image: url('assets/img/pp-cov.jpg'); transform: translate3d(0px, 0px, 0px);"></div>
+        <div class="page-header-image rellax-header" data-rellax-speed="-8" style="background-image: url('assets/img/bg6.jpg'); transform: translate3d(0px, 0px, 0px);"></div>
         <div class="content-center">
             <div class="row">
                 <div class="col-md-8 ml-auto mr-auto">
