--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -15,7 +15,7 @@
             </a>
             </li>
             <li class="nav-item" id="item-invitado">
-            <a class="nav-link" [routerLink]="['/']">
+            <a class="nav-link" [routerLink]="['/soy-invitado']">
                 <p>Soy invitado</p>
             </a>
             </li>
