--- a/src/app/eventos/invitado/evento-invitado.component.html
+++ b/src/app/eventos/invitado/evento-invitado.component.html
@@ -57,7 +57,7 @@
 
           <div class="row" *ngIf="listDeseosSelected.length > 0">
             <div class="col-8 mx-auto form-group">
-              <span>Este deseo tiene un valor de $ 3.000.- por unidad.</span>
+              <span>Este deseo tiene un valor de { valorDeseoAsoc } por unidad.</span>
             </div>
           </div>
 
